07-nginx-ingress/03-hello-svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-v1-svc
  namespace: testing
spec:
  selector:
    app: hello-v1
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
