07-nginx-ingress/04-hello-svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-v2-svc
  namespace: testing
spec:
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
