07-nginx-ingress/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: testing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - k8s-test2
    - k8s-test3
    secretName: tlstest-secret 
  ingressClassName: nginx
  rules:               # For web browser use: https://k8s-test2:<nodePort>
    - host: k8s-test2  # http=  for i in {1..5}; do curl -H "Host: k8s-test2" http://<NodeIP>:<nodePort>; done
      http:            # https= for i in {1..5}; do curl -k -H "Host: k8s-test2" https://<NodeIP>:<nodePort>; done
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: hello-v1-svc
              port:
                number: 80
                       # # For web browser use: https://k8s-test3:<nodePort>/v2
    - host: k8s-test3  # http=  for i in {1..5}; do curl -H "Host: k8s-test3" http://<NodeIP>:<nodePort>/v2; done 
      http:            # https= for i in {1..5}; do curl -k -H "Host: k8s-test3" https://<NodeIP>:<nodePort>/v2; done
        paths:
        - path: /v2
          pathType: Exact
          backend:
            service:
              name: hello-v2-svc
              port:
                number: 80
